# AmazonSpendingCoach

./: .env.example  .gitignore  MANIFEST.in  Makefile  README.md  logging_config.py  main.py  pyproject.toml  requirements.txt
config/: settings.py
graph/: builder.py  state.py
graph/nodes/: __init__.py  cart_analyzer.py  category_classifier.py  impulse_detector.py  load_data.py  spending_forecast.py  write_report.py
tests/: test_graph.py
